2013-06-22  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/SourceFile.H: New.

2013-06-21  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/FileMapping.H: New.

2013-06-21  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/dialect.H: New.
	* include/diagnostics.H: Likewise.
	* include/storage.H: Move from utils/.

2013-06-20  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/diagnostics.H: New.
	* io/std-streams.cc: Likewise.

2013-06-20  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* boot/scanner.boot (shoeToken): Allow inerts.
	* boot/ast.boot (bfInert): New.
	* boot/parser.boot (bpInert): New.
	(bpConstTok): Use it.

2013-06-18  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/compiler.boot (compHasFormat): Take a DB parameter.
	Adjust callers.
	* interp/define.boot (ICformat): Likewise.
	* interp/lisplib.boot (predicateBitIndex): Likewise.
	(predicateBitRef): Likewise.
	(transHasCode): Likewise.

2013-06-17  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/catdef.spad.pamphlet (CommutativeOperatorCategory): New.
	(CommutativeOperation): Likewise.
	* algebra/Makefile.am (oa_algebra_layer_0): Include them.

2013-06-17  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/aggcat.spad.pamphlet (EltableAggregate): Weaken
	requirement on first parameter.
	(IndexedAggregate): Likewise.

2013-06-17  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/catdef.spad.pamphlet (PartialDifferentialSpace): Weaken
	requirement on parameter.
	(PartialDifferentialRing): Likewise.
	(PartialDifferentialModule): Likewise.

2013-06-17  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/parsers.spad.pamphlet: New.
	* algebra/script-parser.spad: Move content to parsers.spad.pamphlet.
	Remove.
	* algebra/spad-parser.spad: Likewise.

2013-06-15  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/ht-util.boot (mkCurryFun): Import function name.
